Fix mobile horizontal scroll.

--- a/projects/brew-tester/src/styles.scss
+++ b/projects/brew-tester/src/styles.scss
@@ -2,4 +2,5 @@
 html,
 body {
 	height: 100vh;
+  overflow-x: hidden;
 }
